# cls

./: README.md
ml_ops/: aws_cloud_lockin_dataset.csv  predict.py  pyproject.toml  train.py
