[tool.poetry]
name = "cloud-lockin-score"
version = "0.1.0"
description = "A machine learning model to predict cloud lock-in scores."
authors = ["Your Name <your.email@example.com>"]
package-mode = false  # Disable packaging mode to avoid installation issues

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^1.3.0"
scikit-learn = "^1.6.1"
joblib = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "train.py"
predict = "predict.py"